# httpretty-demo

./: ageify_client.py  ageify_service.py  pyproject.toml
tests/: test_ageify_service.py
