[tool.poetry]
name = "httppretty_demo"
version = "0.1.0"
description = ""
authors = ["Jasper Wagen <jasperwagen01@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
httpretty = "^1.1.4"
requests = "^2.28.1"
pytest = "^7.1.2"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
